# rag-esp32-llm

./: .gitignore  MANIFEST.in  README.md  app.py  hybrid_rag.py  pyproject.toml  query  rag_templates.py  requirements.txt  test_chroma.py  test_chroma_persist.py  validate.py  web_rag_test.py
.github/workflows/: pytest.yml
data/: esp32_pwm_ledc.md  sample.txt
data/bad_examples/: bad_example.txt
data/docs/: ESP32電圧判定.docx
data/esp32/: arduino_core.txt
data/esp32/esp-idf-standard/: gpio_interrupt_minimal.md
data/esp32/references/: driver_gpio_h.md  esp-idf-programming-guide.md
data/rules/: rules.yaml
data/rules/scripts/: analyze_validation_errors.py
data/templates/: doc_templates.yaml
faiss_bad/: index.faiss  index.pkl
faiss_index_backup/: index.faiss  index.pkl
rag/: __main__.py  auto_fix.py  chunk.py  cli.py  core.py  fix_history.py  qa.py  retriever.py  validate.py  vector_store.py
rag/ingest/: chunker.py  docx_loader.py  loader.py  vectorize.py
scripts/: analyze_validation_errors.py  auto_demote_rules.py  auto_promote_rules.py  ingest_docs.py  run_auto_demote.bat  run_auto_promote.bat  test_docx_chunk.py  test_docx_text.py  test_loader.py  test_vectorize.py
tests/: test_cli.py  test_detect_rule_key.py  test_validate.py
tests/data/: invalid_no_code_block.txt  invalid_no_spi_begin.txt  invalid_no_wire_begin.txt  valid_i2c_spi.txt
